Modification des vérification de Sessions et des Swal (ajout de titres)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,14 @@ body {
     z-index: 1;
 }
 
+.swal-modal {
+    width: 550px;
+}
+
+.swal-title {
+    font-family: inherit;
+}
+
 .swal-text {
     font-size: 1.125rem;
     text-align: center;
@@ -32,7 +40,6 @@ body {
 }
 
 #myNav {
-    position: relative;
     z-index: 2;
 }
 
